# residence_clustering

./: README.md
residence-clustering/: pyproject.toml
residence-clustering-client/: package.json  pnpm-lock.yaml
residence-clustering-client/src/: App.tsx  types.ts
residence-clustering-client/src/pages/: Home.tsx
residence-clustering-client/src/services/: api.tsx
residence-clustering/residence_clustering/: AddressDetailsApiResponse.py  AutocompleteApiResponse.py  PlaceSearchApiResponse.py  PlaceSearchCategory.py  main.py
