[tool.poetry]
name = "residence-clustering"
version = "0.1.0"
description = ""
authors = ["Shubh A Chudasama <shubh.cs@proton.me>"]
readme = "README.md"
packages = [{include = "residence_clustering"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
numpy = "^1.25.2"
pandas = "^2.1.0"
seaborn = "^0.12.2"
folium = "^0.14.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
black = "^23.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
